# opportunities

./: .dockerignore  .env.example  .gitignore  AUTOAPPLY_CODE_WALKTHROUGH.md  AUTOAPPLY_LINE_BY_LINE.md  AUTOAPPLY_SUBMITTERS_DETAILED.md  CLAUDE.md  Makefile  README.md  cta_diff.txt  footer_diff.txt  go.mod  go.sum  package-lock.json  package.json
.github/workflows/: ci.yaml  release.yaml  ui-ci.yml
apps/api/: Dockerfile
apps/autoapply/: Dockerfile
apps/candidates/: Dockerfile
apps/crawler/: Dockerfile
apps/frontier-worker/: Dockerfile
apps/iceberg-ops/: Dockerfile  README.md  pyproject.toml
apps/iceberg-ops/src/stawi_iceberg_ops/: __init__.py  catalog.py  hourly.py  merge_current.py  nightly.py  tables.py
apps/iceberg-ops/tests/: test_catalog.py  test_tables.py
apps/matching/: Dockerfile
apps/materializer/: Dockerfile
apps/scheduler/: Dockerfile
apps/worker/: Dockerfile
apps/writer/: Dockerfile
cmd/ats-tenants/: main.go
cmd/crawl-once/: main.go
cmd/dedupe/: main.go
cmd/embed-backfill/: main.go
cmd/how-to-apply-backfill/: main.go
deploy/: docker-compose.yml
docs/: 80pct-job-ingestion-plan.md  api-reference.md  autoapply-session-capture.md  local-autoapply-walkthrough.md
extension/: README.md  background.js  manifest.json
scripts/: archive-verify.sh  dev-autoapply.sh  dev-pair.sh  seed-dev-candidate.sh
seeds/: apis.json  global.json  greenhouse_boards.json  lever_boards.json  scholarships-daad.json  workday_sites.json
ui/: .gitignore  hugo.toml  hugo_stats.json  package-lock.json  package.json  tailwind.config.js
(+1707 files in other folders)
